JDBM 2.0 beta 3
  - RecordManager.treeMap(String name, Serializer valueSerializer) method did not work correctly, fixed
  - Added packedLong and packedInt to Serializer
